Nav Menu z-index fixed

--- a/css/Styles.css
+++ b/css/Styles.css
@@ -143,59 +143,68 @@ h1 {
 
 .my-nav ul ul {
 	display: none !important;
+	z-index:2;
 }
 
 	.my-nav ul li:hover > ul {
 		display: block !important;
+		z-index:2;
 	}
 	.my-nav ul {
 	padding: 0 20px !important;
 	list-style: none;
 	position: relative;
 	display: inline-table !important;
+	z-index:2;
 	
 }
 	.my-nav ul:after {
 		content: "" !important; clear: both !important; display: block !important;
+		z-index:2;
 	}
 
 	.my-nav ul li {
 	float: left !important;
+	z-index:2;
 }
 	.my-nav ul li:hover {
 		background: #4b545f !important;
 		background: linear-gradient(top, #4f5964 0%, #5f6975 40%) !important;
 		background: -moz-linear-gradient(top, #4f5964 0%, #5f6975 40%) !important;
 		background: -webkit-linear-gradient(top, #4f5964 0%,#5f6975 40% ) !important;
+		z-index:2;
 	}
 		.my-nav ul li:hover a {
 			color: #fff !important;
-			
+			z-index:2;
 		}
 	
 	.my-nav ul li a {
 		display: block !important;
-
+		z-index:2;
 		color: #757575 !important; text-decoration: none !important;
 	}
 
 	.my-nav ul ul {
 	background: #5f6975 !important; border-radius: 0px !important; padding: 0 !important;
 	position: absolute !important; top: 100% !important; margin-left: 0px !important;
+	z-index:2;
 }
 	.my-nav ul ul li {
 		float: none !important; 
 		border-top: 1px solid #6b727c !important;
 		border-bottom: 1px solid #575f6a !important;
-		position: relative !important;
+		position: relative !important;z-index:2;
 	}
 		.my-nav ul ul li a {
 			padding: 10px 40px !important;
 			color: #fff !important;
 			width: 140px !important;
+			z-index:2;
 		}	
 			.my-nav ul ul li a:hover {
 				background: #4b545f !important;
+				z-index:2;
 			}
 
 /* CRUD CSS */
